# advent-of-code-2019

./: README.md  aoc2019.cabal  stack.yaml
day1/: day1.hs  part2.hs
day10/: day10.hs
day11/: day11.hs  plotpoints.sh
day12/: day12.hs
day13/: day13.hs  input.hacked  loadStates.py
day14/: day14.hs
day16/: day16.hs
day17/: day17.hs
day18/: day18.hs
day2/: day2.hs  part2.hs
day3/: part1.hs  part2.hs
day4/: part1.hs  part2.hs
day5/: day5.hs
day6/: Common.hs  part1.hs  part2.hs
day7/: Common.hs  part1.hs  part2.hs
day8/: part1.hs  part2.hs
day9/: day9.hs
