cabal-version: 1.12

name:           aoc2019
version:        0.1.0.0
description:    Solutions for Advent of Code 2019
author:         Andrew Barbarello
build-type:     Simple

executable day1
  main-is: day1.hs
  hs-source-dirs:
      day1
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day1p2
  main-is: part2.hs
  hs-source-dirs:
      day1
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day2
  main-is: day2.hs
  hs-source-dirs:
      day2
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day2p2
  main-is: part2.hs
  hs-source-dirs:
      day2
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day3
  main-is: part1.hs
  hs-source-dirs:
      day3
  build-depends:
      base >=4.7 && <5,
      containers
  default-language: Haskell2010

executable day3p2
  main-is: part2.hs
  hs-source-dirs:
      day3
  build-depends:
      base >=4.7 && <5,
      containers
  default-language: Haskell2010

executable day4
  main-is: part1.hs
  hs-source-dirs:
      day4
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day4p2
  main-is: part2.hs
  hs-source-dirs:
      day4
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
