cabal-version: 1.12

name:           aoc2019
version:        0.1.0.0
description:    Solutions for Advent of Code 2019
author:         Andrew Barbarello
build-type:     Simple

executable day1
  main-is: day1.hs
  hs-source-dirs:
      day1
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day1p2
  main-is: part2.hs
  hs-source-dirs:
      day1
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day2
  main-is: day2.hs
  hs-source-dirs:
      day2
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day2p2
  main-is: part2.hs
  hs-source-dirs:
      day2
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day3
  main-is: part1.hs
  hs-source-dirs:
      day3
  build-depends:
      base >=4.7 && <5,
      containers
  default-language: Haskell2010

executable day3p2
  main-is: part2.hs
  hs-source-dirs:
      day3
  build-depends:
      base >=4.7 && <5,
      containers
  default-language: Haskell2010

executable day4
  main-is: part1.hs
  hs-source-dirs:
      day4
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day4p2
  main-is: part2.hs
  hs-source-dirs:
      day4
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day5
  main-is: day5.hs
  hs-source-dirs:
      day5
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day6
  main-is: part1.hs
  hs-source-dirs:
      day6
  other-modules:
      Common
  build-depends:
      base >=4.7 && <5,
      containers
  default-language: Haskell2010

executable day6p2
  main-is: part2.hs
  hs-source-dirs:
      day6
  other-modules:
      Common
  build-depends:
      base >=4.7 && <5,
      containers
  default-language: Haskell2010

executable day7
  main-is: part1.hs
  hs-source-dirs:
      day7
  other-modules:
      Common
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day7p2
  main-is: part2.hs
  hs-source-dirs:
      day7
  other-modules:
      Common
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable day8
  main-is: part1.hs
  hs-source-dirs:
      day8
  build-depends:
      base >=4.7 && <5,
      split
  default-language: Haskell2010

executable day8p2
  main-is: part2.hs
  hs-source-dirs:
      day8
  build-depends:
      base >=4.7 && <5,
      split
  default-language: Haskell2010
